--- a/frontend/src/components/CSS/AreaChartStyle.css
+++ b/frontend/src/components/CSS/AreaChartStyle.css
@@ -17,3 +17,18 @@
 .tc-box .recharts-wrapper {
     padding-top: 20px;
 }
+
+.tc-box .fas.fa-pause {
+    position: absolute;
+    font-size: 1.2rem;
+    width: 1.1rem;
+    top: 6em;
+    left: 14.4em;
+    color: white;
+    opacity: 0;
+    transition: transform 0.2s;
+}
+.area-chart-wrapper:active .fas.fa-pause {
+    opacity: 1;
+    transform: scale(2);
+}
