--- a/frontend/src/components/CSS/FrequencyInputStyle.css
+++ b/frontend/src/components/CSS/FrequencyInputStyle.css
@@ -11,17 +11,22 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
 }
+.freq-input {
+  display: flex;
+  justify-content: space-between;
+}
 .f-box {
     border: solid 0.04em rgba(255, 255, 255, 0.452); 
-    border-radius: 1.4em;
+    border-radius: 3em;
     width: 14rem;
-    height: 3rem;
-    margin: 40px auto 0;
-    background-color: #00fede;
+    height: 2.6rem;
+    margin: auto;
+    background-color: #0feccfee;
     position: relative;
     overflow: hidden;
     transition: all 0.5s ease;
-    color: black;
+    color: #222;
+    margin-right: 3em;
   }
 .f-box:before {
     content: '';
@@ -29,7 +34,7 @@ input[type=number] {
     width: 3rem;
     height: 100%;
     position: relative;
-    background-color: #000;
+    background-color: #222;
     transition: all 0.5s ease;
   }
 .f-input {
@@ -38,35 +43,46 @@ input[type=number] {
     box-shadow: none;
     border: none;
     background: transparent;
-    color: #000;
+    color: #333;
     padding: 0.1em 0.1em 0.1em 0.3em;
     font-size: 2.2em;
     position: absolute;
     top: 0.22em;
     right: 1.4em;
 }
-  
 .f-input:focus {
-    outline: none;
-  }
- 
+  outline: none;
+}
 .f-button {
     position: absolute;
-    width: 3rem;
-    top: 0.01em;
-    right: 0.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 1em;
+    width: 1em;
+    top: 0.04em;
+    right: 0.1em;
+    font-size: 2.4em;
+    background: rgb(7, 7, 7);
+    color: #0feccfee;
+    border-radius: 1em;
+    padding-bottom: 0.15em;
+    padding-left: 0.1em;
+}
+.f-button:hover {
+  color: #00fddb;
+  background: rgb(51, 51, 51);
+}
+.f-button:active {
+  color: #1dd6beee;
+  background: #000;
 }
 .f-txt {
     letter-spacing: -0.05em;
     position: absolute;
     height: 0.8em;
     width: 3em;
-    top: -0.12em;
+    top: -0.14em;
     right: -0.2em;
-    font-size: 2.4rem;
-}
-.otime-box {
-    color: #00fede;
-    font-size: 2.4rem;
-    margin: 40px auto 0;
+    font-size: 2.2rem;
 }
