--- a/frontend/src/components/CSS/AreaChartStyle.css
+++ b/frontend/src/components/CSS/AreaChartStyle.css
@@ -20,15 +20,22 @@
 
 .tc-box .fas.fa-pause {
     position: absolute;
-    font-size: 1.2rem;
-    width: 1.1rem;
-    top: 6em;
-    left: 14.4em;
+    font-size: 0.5em;
+    border-radius: 2em;
+    align-self: center;
+    justify-self: center;
+    width: 3em;
+    height: 3em;
+    padding-top: 0.9em;
+    text-align: center;
+    right: 17rem;
+    top: 7rem;
     color: white;
     opacity: 0;
-    transition: transform 0.2s;
+    background: rgba(2,2,2,0.2);
+    transition: transform 0.1s ease-in-out;
 }
 .area-chart-wrapper:active .fas.fa-pause {
     opacity: 1;
-    transform: scale(2);
+    transform: scale(3);
 }
