--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -167,6 +167,31 @@
     width: 316px;
     height: 267px;
 }
+.tc-box .recharts-wrapper {
+    padding-top: 20px;
+}
+
+.tc-box .fas.fa-pause {
+    position: absolute;
+    font-size: 0.5em;
+    border-radius: 2em;
+    align-self: center;
+    justify-self: center;
+    width: 3em;
+    height: 3em;
+    padding-top: 0.9em;
+    text-align: center;
+    right: 17rem;
+    top: 7rem;
+    color: white;
+    opacity: 0;
+    background: rgba(2,2,2,0.2);
+    transition: transform 0.1s ease-in-out;
+}
+.area-chart-wrapper:active .fas.fa-pause {
+    opacity: 1;
+    transform: scale(3);
+}
 .stop-all-trend {
     margin: auto;
     margin-top: 1em;
