--- a/frontend/src/components/CSS/FrequencyInputStyle.css
+++ b/frontend/src/components/CSS/FrequencyInputStyle.css
@@ -86,3 +86,17 @@ input[type=number] {
     right: -0.2em;
     font-size: 2.2rem;
 }
+.set-height {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.5em;
+}
+.height-input {
+  width: 1.8em;
+  margin-left: 0.5em;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid #1985A1;
+  outline: none;
+}
