--- a/frontend/src/components/CSS/EntryPageStyle.css
+++ b/frontend/src/components/CSS/EntryPageStyle.css
@@ -1,9 +1,9 @@
 .speed-dc .dc .text {
-    right: 11.8em;
+    right: 11.5em;
     top: 3.2em;
 }
 .speed-dc .dc .unitText {
-    right: 0.6em;
+    right: 0.8em;
     top: 1em;
 }
 .motor-info {
@@ -39,14 +39,14 @@
     left: 2em;
     font-weight: normal;
 }
-.height-tc .review-btn {
+.height-tc .review-btn,.height-tc .forw-btn{
     top: 2em;
-    left: 0.6em;
-    width: 4em;
+    left: 0em;
+    width: 3em;
     height: 12.4em;
 }
 .height-tc .forw-btn {
-    left: 27em;
+    left: 28em;
 }
 .height-tc .recharts-cartesian-axis-ticks text {
     stroke-width: 0;
@@ -73,4 +73,9 @@
 .height-tc .area-chart-wrapper:active .fas.fa-pause {
     opacity: 1;
     transform: scale(3);
+}
+.dc-tribtn-adjust {
+    position:absolute;
+    height: 5rem;
+    width: 5rem;
 }
