--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -1,4 +1,4 @@
-.motor-1-dc {
+.motor-dc {
     border: solid 1px #eeeeee ;
     margin-bottom: 0.8rem;
     border-radius: 1.4em;
@@ -103,6 +103,7 @@
     padding-top: 0.2em;
     padding-left: 2.2rem;
     transition: background-color 300ms ease-in-out;
+    z-index: 10;
 }
 .trend-button:hover {
     background-color: rgba(230,230,230,0.4);
@@ -117,7 +118,7 @@
     border-width: 2px;
 }
 
-.motor-1-dc {
+.motor-dc {
     max-width: 1366px!important;
     margin: 0.01em auto;
     border-radius: 1.4em;
@@ -149,7 +150,7 @@
     right: 1.0em;
     transition: color 100ms ease-in-out;
     color: #111111dd;
-    z-index: 9999999;
+    z-index: 9;
 }
 .tc-box .exit-button:hover {
     color: #eeeeee;
@@ -218,4 +219,27 @@
     color: #E85F5C;
     border-width: 2px;
     font-weight: 700;
+}
+.motor-dc .dc-tribtn-adjust {
+    display: flex;
+    flex-direction: column;
+    position:absolute;
+    top: -1em;
+    left: 13em;
+    height: 7rem;
+    width: 4rem;
+    z-index: 5;
+    border-radius: 0.3em;
+}
+.motor-dc .current-box .dc-tribtn-adjust,.motorT-box .dc-tribtn-adjust {
+    left: -5em;
+}
+.motor-dc .dc-adjust-tribtn-input {
+    z-index: 3;
+    background: rgba(221,221,238,0.4);
+    border:none;
+    height: 1.8rem;
+    width: 100%;
+    font-size: 1.5em;
+    margin-bottom: 0.15rem;
 }
