--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -227,19 +227,20 @@
     top: -1em;
     left: 13em;
     height: 7rem;
-    width: 4rem;
+    width: 5rem;
     z-index: 5;
     border-radius: 0.3em;
 }
 .motor-dc .current-box .dc-tribtn-adjust,.motorT-box .dc-tribtn-adjust {
-    left: -5em;
+    left: -6em;
 }
 .motor-dc .dc-adjust-tribtn-input {
     z-index: 3;
-    background: rgba(221,221,238,0.4);
+    background: rgba(221,221,238,0.1);
     border:none;
     height: 1.8rem;
     width: 100%;
     font-size: 1.5em;
     margin-bottom: 0.15rem;
+    color: white;
 }
