--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -4,9 +4,17 @@
     border-radius: 1.4em;
     max-width: 1366px!important;
 }
+.motor-dc.container {
+    padding-top: 6em;
+}
 .page-button {
     display: flex;
     font-weight: 600;
+    position: absolute;
+    top: 5.5em;
+    left: 2em;
+    width: 10%;
+    margin:0!important;
 }
 .page-button a{
     margin-right: 0.2em;  
@@ -224,16 +232,22 @@
     display: flex;
     flex-direction: column;
     position:absolute;
-    top: -1em;
+    top: -6.5em;
     left: 13em;
-    height: 7rem;
-    width: 5rem;
+    height: 10.5rem;
+    width: 6rem;
     z-index: 5;
     border-radius: 0.3em;
 }
 .motor-dc .current-box .dc-tribtn-adjust,.motorT-box .dc-tribtn-adjust {
-    left: -6em;
+    left: -7em;
 }
+
+.motor-dc .power-box .dc-tribtn-adjust{
+    top: 2em;
+    left: 12.5em;
+}
+
 .motor-dc .dc-adjust-tribtn-input {
     z-index: 3;
     background: rgba(221,221,238,0.1);
