--- a/frontend/src/components/CSS/FreHeightInputStyle.css
+++ b/frontend/src/components/CSS/FreHeightInputStyle.css
@@ -68,12 +68,10 @@ input[type=number] {
   color:rgba(255, 255, 255, 0.4);
 }
 .f-txt {
+    text-align: center;
     letter-spacing: -0.05em;
-    position: absolute;
-    height: 0.6em;
-    width: 3em;
-    top: -0.14em;
-    right: -0.2em;
+    font-size: 1.6em;
+    color: rgba(255, 255, 255, 0.8);
 }
 .set-height {
   display: flex;
