--- a/frontend/src/components/CSS/CalendarModalStyle.css
+++ b/frontend/src/components/CSS/CalendarModalStyle.css
@@ -1,10 +1,28 @@
 .modal-content .time-box {
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 0.5em;
+    margin-top: 1em;
     width: 100%;
 }
 .currency-input {
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.react-time-picker__wrapper {
+    border: none;
+}
+.react-time-picker__inputGroup__input {
+    outline: none;
+}
+.from, .to {
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
