--- a/frontend/src/components/CSS/LandingStyle.css
+++ b/frontend/src/components/CSS/LandingStyle.css
@@ -237,28 +237,7 @@
 	margin-bottom: 5px;
 }
 
-/* If you don't want the footer to be responsive, remove these media queries */
 
-@media (max-width: 880px) {
-
-	.footer-distributed{
-		font: bold 14px sans-serif;
-	}
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
-		display: block;
-		width: 100%;
-		margin-bottom: 40px;
-		text-align: center;
-	}
-
-	.footer-distributed .footer-center i{
-		margin-left: 0;
-	}
-
-}
 .vertical-line {
 	border-left: 2px solid #C8D5B9;
 	height: 4rem;
@@ -338,4 +317,45 @@
 .entry-row:active ~ .ver-line-box > .vertical-line {
 	border-left: 4px solid #68B0AB;
 	animation: none;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (max-width: 880px) {
+	.container {
+		margin-top:3rem!important;
+	}
+    .container .row .headline{
+		font-size: 2rem!important;
+	}
+	.mb-5 {
+		margin-bottom: 2rem!important;
+	}
+	.entry-row {
+		width: 30%;
+	}
+	.vertical-line, .horizontal-line, .ver-line-box{
+		display: none;
+	}
+	.card .card-img-top{
+		width: 100%;
+		height: 60vw;
+	}   
+	.footer-distributed{
+		font: bold 14px sans-serif;
+	}
+
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
+
+	.footer-distributed .footer-center i{
+		margin-left: 0;
+	}
+
 }
