fix responsive CSS

--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -375,4 +375,9 @@
     .forw-btn{
         left: 21em;
     }
+    .dc .text {
+        font-size: 1.2em;
+        right: 3.5em;
+        top: 2em;
+    }
 }
