--- a/frontend/src/components/CSS/VirtualPageStyle.css
+++ b/frontend/src/components/CSS/VirtualPageStyle.css
@@ -74,6 +74,11 @@
         top: 0em;
         border: none!important;
     }
+    .entry-page-wrapper .fas.fa-pause {
+        font-size: 5rem;
+        top: 1.3em;
+        right: 1.8em;
+    }
     .entry-page-wrapper .row {
         width: 100%!important;
     }
