--- a/frontend/src/components/CSS/EntryPageStyle.css
+++ b/frontend/src/components/CSS/EntryPageStyle.css
@@ -286,10 +286,10 @@
         margin-right: 0em;
         width: 158px;
         height: 133.5px;
-        z-index: 9999!important;
+        z-index: 100!important;
     }
     .triangle {
-        z-index: 99999!important;
+        z-index: 101!important;
     }
     .triangle-btn-box {
         left: 68.6%;
@@ -323,5 +323,16 @@
     .entry-page .dc-fre-adj {
         top: 2em;
         left: 1.5em;
+    }
+
+    .set-sp1-box{
+        top: 20em;
+        left: 16em;
+    }
+    
+    .set-sp1-box.sp2 {
+        font-size: 0.8em;
+        left: 16em;
+        top: 20em;
     }
 }
