--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -385,8 +385,8 @@
         top: 11em;
     }
     .dc-tribtn-adjust {
-        top: 0em;
-        left: 13em;
+        top: 0em!important;
+        left: 13em!important;
     }
     
 }
