--- a/frontend/src/components/CSS/EntryPageStyle.css
+++ b/frontend/src/components/CSS/EntryPageStyle.css
@@ -275,7 +275,18 @@
     right: 1.6em;
     color: #777; 
 }
-
+.control-status {
+    position: absolute;
+    top: 30em;
+    right: 38em;
+    width: 2em;
+    display: flex;
+    justify-content: space-evenly;
+    width: 6.6em;
+}
+.control-status .led-box {
+    font-size: 0.8em;
+}
 @media screen and (max-width:880px) {
     .entry-motor-img-2.col-md-4.offset-md-3 {
         margin-bottom: 24em;
