--- a/frontend/src/components/CSS/MonitorPageStyle.css
+++ b/frontend/src/components/CSS/MonitorPageStyle.css
@@ -270,7 +270,21 @@
     margin-bottom: 0.15rem;
     color: white;
 }
-
+.motor-name {
+    font-weight: 500;
+    text-align: center;
+    font-size: 1.4em;
+    color: #E9E3B4;
+}
+.motor-dc.container .control-status {
+    top: -2em;
+    right: 20em;
+    height: 6em;
+    display: flex;
+    -webkit-justify-content: space-evenly;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
 @media screen and (max-width:880px) {
     .page-button {
         top: -1.5em;
